# forge-stream

./: .copilot-instructions.md  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
.agents/: backend.agent.md  llm.agent.md  prompt-engineer.agent.md
.github/: copilot-instructions.md
.instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  global.instructions.md
.workflows/: pr-review.md
api/: pyproject.toml
api/app/: config.py  dependencies.py  main.py
api/app/middleware/: csrf.py  rate_limit.py  sanitize.py  validation.py
api/app/models/: auth.py  github_app.py  user.py
api/app/prompts/: base.py  schemas.py  work_items.py
api/app/providers/: __init__.py  anthropic_provider.py  auto.py  auto_router.py  base.py  budget.py  config.py  database.py  email.py  gemini_provider.py  github.py  github_app.py  llm_provider.py  ollama_provider.py  openai_provider.py  redis.py  retry.py  validation.py
api/app/repositories/: analytics.py  base.py  oauth_account.py  password_reset.py  refresh_token.py  repository.py  user.py
api/app/routers/: analytics.py  auth.py  csrf.py  github_app.py  jobs.py  repositories.py  work_items.py
api/app/schemas/: analytics.py  github_repos.py  jobs.py  repositories.py  work_items.py
api/app/security/: __init__.py  encryption.py  jwt.py  password.py
api/app/services/: analytics.py  auth.py  github_app_service.py  github_issue_service.py  github_repos_service.py  github_service.py  repository_service.py  work_item_service.py
api/app/workers/: __init__.py  entrypoint.py  job_queue.py  worker.py
api/db/migrations/: 001_initial_schema.sql
api/scripts/: init_admin.py
api/tests/: conftest.py  test_analytics.py  test_api_auth.py  test_api_contracts.py  test_auto_router.py  test_csrf.py  test_csrf_middleware.py  test_encryption.py  test_github_app.py  test_github_issue_service.py  test_init_admin.py  test_job_queue.py  test_jobs.py  test_llm_provider.py  test_middleware.py  test_prompt_template.py  test_providers.py  test_rate_limit.py  test_repositories.py  test_sanitize.py  test_schemas.py  test_validation.py  test_work_items.py  test_worker.py
docs/: technical_spec.md
shared/: package.json
web/: package.json  playwright.config.ts
(+52 files in other folders)
