[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-stream-api"
version = "0.1.0"
description = "ForgeStream API service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "redis>=5.0.0",
    "aiosmtplib>=3.0.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
    "PyGithub>=2.5.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
